force-app/main/default/objects/Working_Hour__c/Working_Hour__c.object-meta.xml
<CustomObject>
    <label>Working Hour</label>
    <nameField>
        <displayFormat>WH-{000000}</displayFormat>
        <label>Working Hour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>