force-app/main/default/objects/Working_Hour__c/fields/IsAvailableOnFriday__c.field-meta.xml
<CustomField>
    <fullName>IsAvailableOnFriday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>