force-app/main/default/objects/Working_Hour__c/fields/IsAvailableOnMonday__c.field-meta.xml
<CustomField>
    <fullName>IsAvailableOnMonday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>