force-app/main/default/objects/Working_Hour__c/fields/IsAvailableOnSaturday__c.field-meta.xml
<CustomField>
    <fullName>IsAvailableOnSaturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>