force-app/main/default/objects/Working_Hour__c/fields/IsAvailableOnSunday__c.field-meta.xml
<CustomField>
    <fullName>IsAvailableOnSunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>