force-app/main/default/objects/Working_Hour__c/fields/IsAvailableOnThursday__c.field-meta.xml
<CustomField>
    <fullName>IsAvailableOnThursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>