force-app/main/default/objects/Working_Hour__c/fields/IsAvailableOnTuesday__c.field-meta.xml
<CustomField>
    <fullName>IsAvailableOnTuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>