force-app/main/default/objects/Working_Hour__c/fields/isAvailableOnWednesday__c.field-meta.xml
<CustomField>
    <fullName>isAvailableOnWednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>