force-app/main/default/objects/Working_Hour__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Working Hours</relationshipLabel>
    <relationshipName>Working_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>